FAQ: added spinning gears and other transitions

--- a/index.html
+++ b/index.html
@@ -108,39 +108,79 @@
   <!-- FAQ section start -->
   <section class="faq-section flex flex-col items-center justify-center w-full py-16 bg-white" id="faq-section">
     <h2 class="text-4xl font-bold mb-12 text-center">Frequently Asked Questions</h2>
-    <div class="faq-grid flex justify-center w-full" style="padding-left:200px; padding-right:200px;">
+    <div class="faq-grid flex justify-center w-full" style="padding-left:350px; padding-right:200px; padding-bottom:100px">
       <div class="grid grid-cols-2 grid-rows-4 gap-12 w-full max-w-6xl">
         <!-- FAQ items -->
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="0">What is a hackathon?</div>
-          <div class="faq-answer">A hackathon is a collaborative event where participants build projects and solve problems using technology, often within a limited time frame.</div>
+          <div class="faq-ring" data-faq="0">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">What is a hackathon?</span>
+            </span>
+          </div>
+          <div class="faq-answer">A hackathon is a collaborative event where participants build projects and solve problems using technology within a limited time frame.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="1">Who can participate?</div>
+          <div class="faq-ring" data-faq="1">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">Who can participate?</span>
+            </span>
+          </div>
           <div class="faq-answer">HammerHacks is open to all Hamilton high-school students, regardless of experience level.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="2">Do I need coding experience?</div>
+          <div class="faq-ring" data-faq="2">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">Do I need coding experience?</span>
+            </span>
+          </div>
           <div class="faq-answer">No prior coding experience is required! We welcome beginners and provide workshops to help you get started.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="3">How much does it cost?</div>
+          <div class="faq-ring" data-faq="3">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">How much does it cost?</span>
+            </span>
+          </div>
           <div class="faq-answer">Participation is free! Just bring your creativity and enthusiasm.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="4">What should I bring?</div>
+          <div class="faq-ring" data-faq="4">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">What should I bring?</span>
+            </span>
+          </div>
           <div class="faq-answer">Bring a laptop, charger, and any materials you need for your project. Snacks and meals will be provided.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="5">Can I work in a team?</div>
+          <div class="faq-ring" data-faq="5">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">Can I work in a team?</span>
+            </span>
+          </div>
           <div class="faq-answer">Yes! Teams of up to 4 are encouraged, but you're free to work alone if you wish. You can form a team before or during the event.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="6">What if I don't have a team?</div>
+          <div class="faq-ring" data-faq="6">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">What if I don't have a team?</span>
+            </span>
+          </div>
           <div class="faq-answer">No worries! We'll help you find teammates at the event if you'd like to join a group.</div>
         </div>
         <div class="faq-item flex items-center relative">
-          <div class="faq-ring" data-faq="7">How do I register?</div>
+          <div class="faq-ring" data-faq="7">
+            <span class="faq-gear-container">
+              <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
+              <span class="faq-gear-text">How do I register?</span>
+            </span>
+          </div>
           <div class="faq-answer">Click the Register button at the top of the page and fill out the form to secure your spot.</div>
         </div>
       </div>
@@ -183,7 +223,7 @@
             <img src="assets/logo.webp" alt="Member 3" class="team-member-img team-member" data-desc="<strong>David Cosma</strong><br>Lead Web Developer Likes → Board Games & Raspberries <br>Grade 12 @ Westmount SS" />
           </a>
           <a href="https://www.linkedin.com/in/aaron-dam-a798512a5/" target="_blank" rel="noopener noreferrer">
-            <img src="assets/headshots/AaronDam.jpeg" alt="Member 4" class="team-member-img team-member" data-desc="<strong>Aaron Dam</strong><br>Web Developer Likes → Boba & Peanut Butter <br>Grade 12 @ Westmount SS" />
+            <img src="assets/headshots/AaronDam.jpeg" alt="Member 4" class="team-member-img team-member" data-desc="<strong>Aaron Dam</strong><br>Web Developer Likes → Basketball & Peanut Butter <br>Grade 12 @ Westmount SS" />
           </a>
           <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/Unimashi.jpg" alt="Member 5" class="team-member-img team-member" data-desc="<strong>Unimashi Ugor</strong><br>Web Developer Likes → Roller Coasters, Computer Systems & Retro Gaming <br>Grade 11 @ Bishop Ryan CSS" />
