FAQ heading scrolls to FAQ section, donate heading leads to HCB

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       Schedule
     </button>
     <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">
-      FAQ
+      <a href="#faq-section">  FAQ </a>
     </button>
     <button class=" slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">
      <a href="#team-section">  Team </a>
@@ -46,9 +46,11 @@
     <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">
       Support
     </button>
-    <button class="slide-in absolute right-0 top-5 mr-4 text-3xl h-13 w-35 rounded-3xl font-bold bg-orange-400 border-orange-400 hover:bg-blue-800 text-white  border-8   hover:border-blue-800">
+    <a href="https://hcb.hackclub.com/donations/start/hammerhacks"
+       class="text-3xl border-8 border-orange-400 rounded-4xl font-bold bg-orange-400 relative top-10 hover:bg-blue-800 hover:border-blue-800"
+       style="height: 3.5rem; width: 10rem; right: -325px; top: 20px; position: relative; display: inline-block;">
       Donate
-    </button>
+    </a>
   </div>
   <div class="homepage">
     <div class="slide-in mx-auto w-auto">
@@ -106,9 +108,9 @@
     
   </div>
   <!-- FAQ section start -->
-  <section class="faq-section flex flex-col items-center justify-center w-full py-16 bg-white" id="faq-section">
+  <section class="faq-section flex flex-col items-center justify-center w-full py-16" id="faq-section">
     <h2 class="text-4xl font-bold mb-12 text-center">Frequently Asked Questions</h2>
-    <div class="faq-grid flex justify-center w-full" style="padding-left:350px; padding-right:200px; padding-bottom:100px">
+    <div class="faq-grid flex justify-center w-full" style="padding-left:350px; padding-right:200px; padding-bottom:100px;">
       <div class="grid grid-cols-2 grid-rows-4 gap-12 w-full max-w-6xl">
         <!-- FAQ items -->
         <div class="faq-item flex items-center relative">
