Recap and background

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           class="h-100 w-100 my-20 mx-auto" />
        </a>
       <div class="slide-in relative bottom-15">
-        <h1 class="slide-in text-4xl font-bold text-yellow-500">A High School Hackathon where you can present your amazing ideas with technology!</h1>
-        <h1 class="slide-in text-4xl font-bold">Winter 2026</h1>
-        <h1 class="slide-in text-4xl font-bold">Hamilton, Ontario</h1>
+        <h1 class="slide-in text-4xl font-bold text-yellow-500 glowing-text-yellow">A High School Hackathon where you can present your amazing ideas with technology!</h1>
+        <h1 class="slide-in text-4xl font-bold glowing-text">Winter 2026</h1>
+        <h1 class="slide-in text-4xl font-bold glowing-text">Hamilton, Ontario</h1>
       </div>
 
   
@@ -96,6 +96,20 @@
 
 	   
     </section>
+</div>
+
+<div class="Recap slide-in">
+  <h1 class="text-6xl font-bold">HAMMERHACKS LAST YEAR (2024)</h1>
+  <h1 class="text-5xl underline">Facts and Stats</h1>
+  <h1 class="text-4xl">140 Students and 20 Mentors</h1>
+  <h1 class="text-4xl">40 projects made and pitched in under 6 hours</h1>
+  <h1 class="text-4xl">Raised over 12,000 in monetary and in-kind support</h1>
+
+
+
+  <div class="flex justify-center">
+      <a href="https://www.youtube.com/watch?v=Jb-2RpDonEs" class="underline text-4xl text-orange-500">RECAP VIDEO OF 2024</a>
+  </div>
 </div>
 
 
