removed support section
 and re-justified donate

--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
     <button class=" slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">
      <a href="#team-section">  Team </a>
     </button>
-    <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">
-      Support
-    </button>
     <a href="https://hcb.hackclub.com/donations/start/hammerhacks"
-       class="text-3xl border-8 border-orange-400 rounded-4xl font-bold bg-orange-400 relative top-10 hover:bg-blue-800 hover:border-blue-800"
-       style="height: 3.5rem; width: 10rem; right: -325px; top: 20px; position: relative; display: inline-block;">
+        class="text-2xl font-bold text-white bg-orange-400 border-4 border-orange-400 rounded-full px-6 py-2 absolute top-6 right-6 hover:bg-blue-800 hover:border-blue-800 transition">
       Donate
     </a>
   </div>
