--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </p>
       <br>
       <p class="text-lg mt-4 slide-in">
-        Join 100+ Hackers at "Insert location" and "Insert Time" to collaborate and create unique solutions that push your skills to the limits, all while having fun and connecting with like-minded individuals.
+        Join 100+ Hackers at to collaborate and create unique solutions that push your skills to the limits, all while having fun and connecting with like-minded individuals.
       </p>
 	  
 	  <p class="text-left text-1xl font-bold text-gray-800 mt-8 slide-in">
-	  From the HammerHacks team.. (need to get more signatures)
+	  From the HammerHacks team.
 	  </p>
 	  <img src="assets/signatures.png" class="signature-img"> 
 	  
