--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 
 <div class="about-us bg-gray-100 p-12 my-12 caps">
-  <section class="text-center caps" id="about">
+  <section class="text-center" id="about">
     <div class="letter bg-white border border-gray-400 shadow-lg mx-auto mt-8 p-8 max-w-4xl relative slide-in">
       
      
@@ -89,7 +89,7 @@
       </p>
       <br>
       <p class="text-lg mt-4 slide-in">
-        Join 100+ Hackers at to collaborate and create unique solutions that push your skills to the limits, all while having fun and connecting with like-minded individuals.
+        Join 100+ Hackers to collaborate and create unique solutions that push your skills to the limits, all while having fun and connecting with like-minded individuals.
       </p>
 	  
 	  <p class="text-left text-1xl font-bold text-gray-800 mt-8 slide-in">
@@ -105,7 +105,7 @@
     </section>
 </div>
 
-<div class="Recap slide-in caps">
+<div class="Recap slide-in">
 <br>
   <h1 class="text-5xl font-bold">Last year's HammerHacks</h1>
  <br>
