--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           class="h-14 w-auto max-w-[160px] transition-transform duration-300 hover:scale-105 drop-shadow-md rounded-md" />
        </a>
     </div>
-    <!-- Desktop nav -->
+    <!-- desktop nav -->
     <div class="desktop-nav">
       <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30"><a href="#about"> About</a></button>
       <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">Sponsors</button>
@@ -42,7 +42,7 @@
         Donate
       </a>
     </div>
-    <!-- Mobile nav -->
+    <!-- mobile nav -->
     <div class="mobile-nav" style="display:none;">
       <button id="mobile-menu-toggle" class="text-2xl font-bold text-white bg-orange-400 border-4 border-orange-400 rounded-full px-6 py-2 absolute top-6 right-6 hover:bg-blue-800 hover:border-blue-800 transition">
         Menu
@@ -112,7 +112,7 @@
   <h1 class="text-4xl underline">Facts and Stats</h1>
   <h1 class="text-3xl">140 Students and 20 Mentors</h1>
   <h1 class="text-3xl">40 projects made and pitched in under 6 hours</h1>
-  <h1 class="text-3xl">Raised over 12,000 in monetary and in-kind support</h1>
+  <h1 class="text-3xl">Raised over $12,000 in monetary and in-kind support</h1>
 
 
 
@@ -129,10 +129,10 @@
   <!-- FAQ section start -->
   <section class="faq-section flex flex-col items-center justify-center w-full py-16 caps" id="faq-section">
     <h2 class="text-4xl font-bold mb-12 text-center">Frequently Asked Questions</h2>
-    <div class="faq-grid flex justify-center w-full" style="padding-left:350px; padding-right:200px; padding-bottom:100px;">
-      <div class="grid grid-cols-2 grid-rows-4 gap-12 w-full max-w-6xl">
-        <!-- FAQ items -->
-        <div class="faq-item flex items-center relative">
+    <div class="faq-grid flex justify-center w-full">
+      <div class="grid grid-cols-2 grid-rows-4 gap-x-4 gap-y-6 sm:gap-x-12 sm:gap-y-12 w-full max-w-6xl">
+        <!-- FAQ items: left column (0,2,4,6), right column (1,3,5,7) -->
+        <div class="faq-item flex items-center relative;">
           <div class="faq-ring" data-faq="0">
             <span class="faq-gear-container">
               <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
@@ -141,7 +141,7 @@
           </div>
           <div class="faq-answer">A hackathon is a collaborative event where participants build projects and solve problems using technology within a limited time frame.</div>
         </div>
-        <div class="faq-item flex items-center relative">
+        <div class="faq-item right flex items-center relative">
           <div class="faq-ring" data-faq="1">
             <span class="faq-gear-container">
               <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
@@ -159,7 +159,7 @@
           </div>
           <div class="faq-answer">No prior coding experience is required! We welcome beginners and provide workshops to help you get started.</div>
         </div>
-        <div class="faq-item flex items-center relative">
+        <div class="faq-item right flex items-center relative">
           <div class="faq-ring" data-faq="3">
             <span class="faq-gear-container">
               <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
@@ -177,7 +177,7 @@
           </div>
           <div class="faq-answer">Bring a laptop, charger, and any materials you need for your project. Snacks and meals will be provided.</div>
         </div>
-        <div class="faq-item flex items-center relative">
+        <div class="faq-item right flex items-center relative">
           <div class="faq-ring" data-faq="5">
             <span class="faq-gear-container">
               <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
@@ -195,7 +195,7 @@
           </div>
           <div class="faq-answer">No worries! We'll help you find teammates at the event if you'd like to join a group.</div>
         </div>
-        <div class="faq-item flex items-center relative">
+        <div class="faq-item right flex items-center relative">
           <div class="faq-ring" data-faq="7">
             <span class="faq-gear-container">
               <img src="assets/blueGear.png" alt="Gear" class="faq-gear-img" />
@@ -287,8 +287,8 @@
     </section>
     </section>
     <!-- team sect end -->
-  <div class="foot" id="footer">
-    <p class="text-3xl font-bold relative top-4 ">
+<div class="foot" id="footer" style="padding-bottom: 40px;">
+    <p class="text-3xl font-bold relative top-4">
     Interested in supporting our hackathon?</p>
     <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="text-3xl border-8 border-orange-400  rounded-4xl font-bold bg-orange-400 relative top-10 hover:bg-blue-800  hover:border-blue-800">
       Donate
@@ -296,7 +296,7 @@
     <h1 class="text-2xl font-bold relative top-15">Contact Us</h1>
     <p class="text-1xl relative top-15 font-[Roboto]">For any inquiries, please email us at <a href="mailto:info@hammerhacks.ca" class="underline text-orange-500">info&commat;hammerhacks.ca</a></p>
 
-      <div class="credits">
+      <div class="credits" style="top:80px;">
             <p class="font-[Roboto]">Our <a href="https://github.com/HammerHacks/2025-Website" class="underline text-orange-400">website</a> and <a href="https://hcb.hackclub.com/hammerhacks" class="underline text-green-500">finances</a> are open</p>
             <p class="hcb">HammerHacks is fiscally sponsored by The Hack Foundation (d.b.a. <a href="https://hackclub.com/hcb">Hack Club</a>), a 501(c)(3) nonprofit (EIN: 81-2908499)</p>
       </div>
