fixed a few whoopsies

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <section class="flex flex-col w-full bg-gray-100 mt-12 slide-in items-center caps" id="team-section">
       <!-- description centered above -->
       <div class="w-full flex flex-col items-center justify-center mb-8" style="padding-top:32px;">
-        <h2 class="text-3xl font-bold mb-4">Made with ❤ by the HammerHacks team </h2>
+        <h2 class="text-3xl font-bold mb-4 text-center">Made with ❤ by the HammerHacks team </h2>
         <div id="team-desc" class="text-lg text-gray-700 min-h-[120px] flex items-center justify-center">
           <div id="team-desc-content" class="w-full">
             <div class="flex flex-col items-center">
@@ -287,7 +287,7 @@
     </section>
     </section>
     <!-- team sect end -->
-<div class="foot" id="footer" style="padding-bottom: 40px;">
+  <div class="foot" id="footer" style="padding-bottom: 40px;">
     <p class="text-3xl font-bold relative top-4">
     Interested in supporting our hackathon?</p>
     <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="text-3xl border-8 border-orange-400  rounded-4xl font-bold bg-orange-400 relative top-10 hover:bg-blue-800  hover:border-blue-800">
