--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body class="main caps">
+<body class="main">
   <div class="head relative" id="header">
    
     <div class="logo pl-6 pr-4 flex items-center">
@@ -33,7 +33,7 @@
     <!-- desktop nav -->
     <div class="desktop-nav">
       <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30"><a href="#about"> About</a></button>
-      <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">Sponsors</button>
+      <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30"><a href="#sponsors"> Sponsors</a></button>
       <!-- <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30">Schedule</button> -->
       <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30"><a href="#faq-section">  FAQ </a></button>
       <button class="slide-in text-2xl relative left-0 hover:text-blue-300 h-25 w-30"><a href="#team-section">  Team </a></button>
@@ -44,16 +44,16 @@
     </div>
     <!-- mobile nav -->
     <div class="mobile-nav" style="display:none;">
-      <button id="mobile-menu-toggle" class="text-2xl font-bold text-white bg-orange-400 border-4 border-orange-400 rounded-full px-6 py-2 absolute top-6 right-6 hover:bg-blue-800 hover:border-blue-800 transition">
+      <button id="mobile-menu-toggle" class="text-2xl font-bold text-white bg-orange-400 border-4 border-orange-400 rounded-full px-6 py-2 absolute top-3 right-6 hover:bg-blue-800 hover:border-blue-800 transition">
         Menu
       </button>
       <div id="mobile-menu" class="mobile-menu-box" style="display:none; position:absolute; top:60px; right:16px; background:white; border-radius:1rem; box-shadow:0 2px 12px rgba(0,0,0,0.12); z-index:99; min-width:180px;">
         <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#about'">About</button>
-        <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#'">Sponsors</button>
-        <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#'">Schedule</button>
+        <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#sponsors'">Sponsors</button>
+        <!-- <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#'">Schedule</button> -->
         <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#faq-section'">FAQ</button>
         <button class="block w-full text-left px-6 py-4 text-2xl border-b border-gray-200" onclick="location.href='#team-section'">Team</button>
-        <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="block w-full text-left px-6 py-4 text-2xl font-bold text-white bg-orange-400 border-4 border-orange-400 rounded-full mt-2 hover:bg-blue-800 hover:border-blue-800 transition">Donate</a>
+        <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="block w-full text-left px-6 py-4 text-2xl font-bold rounded-full mt-2 transition">Donate</a>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
       </p>
       <br>
       <p class="text-lg mt-4 slide-in">
-        Join 100+ Hackers to collaborate and create unique solutions that push your skills to the limits, all while having fun and connecting with like-minded individuals.
+        Join 100+ Hackers to collaborate and create unique solutions that push your skills to the limits, all while having fun, connecting with like-minded individuals, and adding Glamour to the Hammer!
       </p>
 	  
 	  <p class="text-left text-1xl font-bold text-gray-800 mt-8 slide-in caps">
@@ -125,10 +125,10 @@
 </div>
 
 <!-- Sponsor section start -->
-<section class="sponsor-section flex flex-col items-center justify-center w-full py-16 bg-white">
+<section class="sponsor-section flex flex-col items-center justify-center w-full py-16 bg-white" id="sponsors"> 
   <h2 class="text-5xl font-bold mb-6 text-center text-blue-900">Our Sponsors</h2>
   <p class="text-xl text-gray-700 text-center max-w-2xl mb-2">Become a part of Hamilton's largest high school hackathon. Your support helps inspire the next generation of innovators and leaders in technology.</p>
-  <p class="text-lg text-gray-600 text-center max-w-2xl">Looking to make an impact? Email us at <a href="mailto:sponsorships@hammerhacks.ca" class="underline text-orange-500">sponsorships@hammerhacks.ca</a>.</p>
+  <p class="text-lg text-gray-600 text-center max-w-2xl">Looking to make an impact? Email us at <a href="mailto: info@hammerhacks.ca" class="underline text-orange-500">info@hammerhacks.ca</a>.</p>
 </section>
 <!-- Sponsor section end -->
 
@@ -194,7 +194,7 @@
               <span class="faq-gear-text">Can I work in a team?</span>
             </span>
           </div>
-          <div class="faq-answer">Yes! Teams of up to 4 are encouraged, but you're free to work alone if you wish. You can form a team before or during the event.</div>
+          <div class="faq-answer">Yes! Teams of up to 3 are encouraged, but you're free to work alone if you wish. You can form a team before or during the event.</div>
         </div>
         <div class="faq-item flex items-center relative">
           <div class="faq-ring" data-faq="6">
@@ -212,7 +212,7 @@
               <span class="faq-gear-text">How do I register?</span>
             </span>
           </div>
-          <div class="faq-answer">Registration isn't out yet! Check back later and keep up with our <a href="https://www.instagram.com/hammerhacks_/following/" class="underline text-orange-500">Instagram</a></div>
+          <div class="faq-answer">Registration isn't out yet! Check back later and keep up with our <a href="https://www.instagram.com/hammerhacks_/following/" class="underline text-orange-700">Instagram.</a></div>
         </div>
       </div>
     </div>
@@ -228,7 +228,7 @@
     <section class="flex flex-col w-full bg-gray-100 mt-12 slide-in items-center" id="team-section">
       <!-- description centered above -->
       <div class="w-full flex flex-col items-center justify-center mb-8" style="padding-top:32px;">
-        <h2 class="text-3xl font-bold mb-4 text-center">Made with 💖 by the HammerHacks team </h2>
+        <h2 class="text-3xl font-bold mb-4 text-center">Made with 🧡 by the HammerHacks team </h2>
         <div id="team-desc" class="text-lg text-gray-700 min-h-[120px] flex items-center justify-center">
           <div id="team-desc-content" class="w-full">
             <div class="flex flex-col items-center">
@@ -247,10 +247,9 @@
           <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/SelenaNguyen.png" alt="Member 1" class="team-member-img team-member" data-desc="<strong>Selena Nguyen</strong><br>Lead Organizer Likes → Celeste and Hollow Knight<br>Grade 12 @ Orchard Park SS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/maisy-thomas-940a07387/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/MaisyThomas.jpg" alt="Member 2" class="team-member-img team-member" data-desc="<strong>Maisy Thomas</strong><br>Lead Organizer Likes → Swimming and Climbing<br>Grade 12 @ St. Mary SS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/DavidCosma(temporary).jpeg" alt="Member 3" class="team-member-img team-member" data-desc="<strong>David Cosma</strong><br>Lead Web Developer Likes → Board Games and Raspberries <br>Grade 12 @ Westmount SS" />
           </a>
           <a href="https://www.linkedin.com/in/aaron-dam-a798512a5/" target="_blank" rel="noopener noreferrer">
@@ -262,10 +261,10 @@
           <a href="https://www.linkedin.com/in/jasminemontrichard/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/JasmineMontrichard.jpeg" alt="Member 6" class="team-member-img team-member" data-desc="<strong>Jasmine Montrichard</strong><br>Logistics Lead Likes → Philosophy and Economics, Technology, Event Organizing, Drawing<br>Prev. @ St. Jean Brebeuf CSS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/gabriel-tsui/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/GabrielTsui.jpg" alt="Member 7" class="team-member-img team-member" data-desc="<strong>Gabriel Tsui</strong><br>Logistics Coordinator Likes → Philosophy, Art, Rhythm Games, Calisthenics<br>Grade 11 @ St. Mary CSS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
+          <a href="https://ca.linkedin.com/in/jacob-canlas-152a592b3" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/JacobCanlas.PNG" alt="Member 16" class="team-member-img team-member" data-desc="<strong>Jacob Canlas</strong><br>Logistics Coordinator Likes → Pokémon, Dinosaurs, Cats, Manga/Manhwa, Laufey, W2E <br>Grade 12 @ Bishop Ryan CSS" />
           </a>
           <a href="https://www.linkedin.com/in/joel-mathews-4009a5311/" target="_blank" rel="noopener noreferrer">
@@ -274,19 +273,16 @@
           <a href="https://ca.linkedin.com/in/samantha-dallaway-2739b8369 " target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/SamDallaway.png" alt="Member 9" class="team-member-img team-member" data-desc="<strong>Sam Dallaway</strong><br> Operations Coordinator Likes → Minesweeper and Hot Chocolate<br>Grade 12 @ Orchard Park SS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
-            <img src="assets/headshots/RosanSyal.png" alt="Member 10" class="team-member-img team-member" data-desc="<strong>Rosan Syal</strong><br>Operations Coordinator Likes → The Legend of Zelda and Gaming<br>Grade 11 @ Rosan Syal" />
+          <a href="https://www.linkedin.com/in/rosan-syal-1b2a82339/" target="_blank" rel="noopener noreferrer">
+            <img src="assets/headshots/RosanSyal.png" alt="Member 10" class="team-member-img team-member" data-desc="<strong>Rosan Syal</strong><br>Operations Coordinator Likes → The Legend of Zelda and Gaming<br>Grade 11 @ Westdale" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/SukhsimranChana.JPG" alt="Member 11" class="team-member-img team-member" data-desc="<strong>Sukhsimran Chana</strong><br>Marketing Lead Likes → Poutine and Tyler the Creator <br>Grade 12 @ Orchard Park SS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/CameronJ.PNG" alt="Member 12" class="team-member-img team-member" data-desc="<strong>Cameron Jacka</strong><br>Marketing Coordinator Likes → Robotics and Camping <br>Grade 12 @ St. Mary CSS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/MerinelGomez.jpg" alt="Member 13" class="team-member-img team-member" data-desc="<strong>Merinel Gomez</strong><br>Marketing Coordinator Likes → Cats, Art, Writing, Drama <br>Grade 10 @ St. Thomas More CSS" />
           </a>
-          <a href="https://www.linkedin.com/in/selena-nguyen-0b7287321/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/alexandra-lima-66aa8a365/" target="_blank" rel="noopener noreferrer">
             <img src="assets/headshots/AlexandraLima.png" alt="Member 14" class="team-member-img team-member" data-desc="<strong>Alexandra Lima</strong><br>Finance Lead Likes → Music, Tennis, Nintendo Games<br>Grade 12 @ St. Thomas More CSS" />
           </a>
           <a href="https://www.linkedin.com/in/nand-shah-4884b5295/" target="_blank" rel="noopener noreferrer">
